# juggle

./: .cursorrules  .gitattributes  .gitignore  .suite.out  .venv  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  config.example.md  config.json.example  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/: next-action.md
.codesight/: CODESIGHT.md  config.md  coverage.md  libs.md
.codesight/wiki/: index.md  libraries.md  log.md  overview.md
commands/: _context-extraction.md  action-item-dismiss.md  archive-topics.md  capture.md  deep-research.md  delegate.md  doctor.md  init.md  memory-start.md  memory-stop.md  open.md  project:add-task.md  project:close.md  project:create.md  project:critique.md  project:edit.md  project:list.md  project:open.md  project:show.md  remember.md  research-ingest.md  research.md  resume-topic.md  runs.md  schedule.md  search-offline-db.md  search.md  show-agents.md  show-topics.md  start.md  toggle-autopilot.md  toggle-talkback.md
config/: viewports.yaml
deploy/: com.juggle.watchdog.plist
design-system/: README.md
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  agent-context-injection.md  architecture.md  diagnosis-prompts.md  harness-adapters.md  primitives.md  reasonix.toml.example  topic-lifecycle.md
docs/incidents/: 2026-06-11-autopilot-graph-machinery.md  2026-06-13-autopilot-shared-db-corruption.md  2026-06-13-watchdog-g2-crashloop.md  2026-06-15-agent-bloat-stall-rca.md  2026-06-16-integrate-phantom-merged-sha-rca.md
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
hooks/: hooks.json
plan/: 2026-05-17-domain-cleanup-vault-path-refactor-plan.md  2026-05-17-juggle-agent-watchdog-plan.md  2026-06-06-juggle-hardening.md  2026-06-07-worktree-always-integrate.md  2026-06-10-multi-project-autopilot.md  2026-06-10-refactor-for-understanding-and-tokens.md  2026-06-10-refactor-results.md  2026-06-17-llm-gateway.md  2026-06-27-p8-completion.md  2026-06-28-p8-graph.md
reports/: dogfood-2026-05-30.md  dogfood-2026-06-01.md  dogfood-2026-06-27.md  reflect-2026-05-25.md  reflect-2026-06-01.md  reflect-2026-06-08.md  reflect-2026-06-22.md  reflect-2026-06-29.md
research/: 2026-06-17-openrouter-fallback-facts.md  2026-06-18-topic-graph-src-facts.md  2026-06-18-vcs-abstraction.md
scripts/: check_design_cards.py  consolidate_dbs.py  git-merge-plugin-version.py  install-graphify-hooks.sh  juggle-agent-monitor  juggle-agent-watchdog  juggle-selfheal-monitor  loc_gate.py  measure_agent_compliance.py  p8_verify_common.py  p8_verify_step1.py  p8_verify_step2.py  p8_verify_step3.py  p8_verify_step4.py  p8_verify_step5.py  p8_verify_step6.py  smoke_test_agent_compliance.sh  talkback  talkback-stop-hook
scripts/p8_verify/: c5-ddl.sh  (+9 more)
skills/: project:synthesis.md  talkback.md
specs/: 2026-06-17-llm-gateway.md  2026-06-18-unified-topic-graph.md  2026-06-27-topic-project-notebooks.md
src/: daemon_pidfile.py  juggle_add_node.py  juggle_agent_runtime.py  juggle_agent_settings.py  juggle_autopilot_state.py  juggle_claude_trust.py  juggle_cli.py  juggle_cli_aliases.py  juggle_cli_commands.py  juggle_cli_commands_agents.py  juggle_cli_commands_misc.py  juggle_cli_commands_selfheal.py  juggle_cli_commands_threads.py  juggle_cli_common.py  juggle_cli_parsers_agents.py  juggle_cli_parsers_misc.py  juggle_cli_parsers_project.py  juggle_cli_parsers_selfheal.py  juggle_cli_parsers_threads.py  juggle_cli_spec.py  juggle_cmd_add_node.py  juggle_cmd_agents.py  juggle_cmd_agents_common.py  juggle_cmd_agents_complete.py  juggle_cmd_agents_graph.py  juggle_cmd_agents_graph_topics.py  juggle_cmd_agents_lifecycle.py  juggle_cmd_agents_pool.py  juggle_cmd_agents_tasks.py  juggle_cmd_agents_worktree.py  juggle_cmd_autopilot.py  juggle_cmd_context.py  juggle_cmd_db_flush.py  juggle_cmd_doctor.py  juggle_cmd_doctor_p8.py  juggle_cmd_graph.py  juggle_cmd_integrate.py  juggle_cmd_metrics.py  juggle_cmd_misc.py  juggle_cmd_projects.py  (+133 more)
tests/: PARALLEL_SAFETY_AUDIT.md  _daemon_guard.py  _xdist_isolation.py  conftest.py  test_add_node.py  test_agent_context_write_audit.py  test_agent_effort_wiring.py  test_agent_monitor.py  test_agent_prompt_conventions.py  test_agent_runs.py  test_agent_runs_integration.py  test_agent_runtime.py  test_agent_tool_telemetry.py  test_auto_action_items.py  test_auto_archive.py  test_autopilot_guards.py  test_autopilot_state.py  test_capture_route.py  test_cheap_llm_call.py  test_clear_on_reuse.py  test_cli_agents.py  test_cli_alias_parity.py  test_cli_aliases.py  test_cli_deprecation_warning.py  test_cli_editor.py  test_cli_flags.py  test_cli_input_robustness.py  test_cli_main_parser.py  test_cli_spec.py  test_cli_spec_port.py  test_cli_spec_registrar.py  test_cli_threads.py  test_cli_verb_vocab.py  test_cli_verify.py  test_cmd_autopilot.py  test_cmd_context.py  test_cmd_graph.py  test_cmd_metrics.py  test_cmd_runs_cli.py  test_cmd_start_unfreeze.py  (+296 more)
(+185 files in other folders)
