# Project config exists so `uv run pytest` resolves the dependencies the test
# suite (and the src modules it imports) need. The plugin itself ships as
# standalone uv scripts with inline `# /// script` metadata — package = false
# tells uv not to try to build/install this directory as a wheel.
#
# The authoritative plugin version lives in .claude-plugin/plugin.json; the
# version here is a placeholder and is not published.
[project]
name = "juggle"
version = "1.47.3"
description = "Multi-topic conversation orchestrator (Claude Code plugin) — test/dev environment."
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx",
    "pyte",
    "pyyaml",
    "rich",
    "textual",
]

[dependency-groups]
# Installed by default by `uv run` / `uv sync`, so `uv run pytest` just works.
dev = [
    "pytest",
    "pytest-asyncio",
    "numpy",
    "sqlite-vec",
    "flask",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark an async test to run under pytest-asyncio",
    "watchdog_proc: spawns/kills REAL watchdog-like host processes; DESELECTED by default (opt-in with `-m watchdog_proc`) so a normal `pytest` run never touches the live canonical watchdog (T-watchdog-test-proc-scope, 2026-06-16 incident)",
]
# Process-scope isolation: the harness-gate full-suite run must never pkill the
# host canonical watchdog. Destructive proc-spawning tests are opt-in only.
addopts = "-m 'not watchdog_proc' --ignore=tests/test_user_label_resolver.py"
